--- a/html-css-practice/package.json
+++ b/html-css-practice/package.json
@@ -11,6 +11,7 @@
     "@parcel/transformer-sass": "^2.15.4",
     "parcel": "^2.14.0",
     "posthtml-doctype": "^1.1.1",
+    "posthtml-expressions": "^1.11.4",
     "posthtml-include": "^2.0.1",
     "sass": "^1.89.2"
   }
